<resources>
    <string name="app_name">Occursum</string>
    <string name="select_image">Select an Image</string>

    <!-- Main Menu Strings -->
    <string name="main_menu_title">Your Contacts</string>
    <string name="main_menu_search_hint">Search your Contacts here</string>

    <!-- Contact Card Strings -->
    <string name="contact_card_likes">Good Topics:</string>
    <string name="contact_card_dislikes">Bad Topics:</string>

    <!-- New Contact Strings -->
    <string name="new_contact_title">New Contact</string>
    <string name="new_contact_first_name">First Name</string>
    <string name="new_contact_last_name">Last Name</string>
    <string name="new_contact_email">E-Mail</string>
    <string name="new_contact_job_title">Job Title</string>
    <string name="new_contact_phone_number">Phone Number</string>
    <string name="new_contact_add_topic">Add Topic</string>
    <string name="new_contact_like_topic">Add Good Topic</string>
    <string name="new_contact_dislike_topic">Add Bad Topic</string>
    <string name="new_contact_add_button">Create Contact</string>

    <!-- Edit Contact Strings -->
    <string name="edit_contact_title">Edit Contact</string>
    <string name="edit_contact_like_topic">Add Good Topic</string>
    <string name="edit_contact_dislike_topic">Add Bad Topic</string>
    <string name="edit_contact_save_button">Save Contact</string>

    <!-- View Contact Strings -->
    <string name="view_contact_edit_button">Edit</string>
    <string name="view_contact_delete_button">Delete</string>
    <string name="view_contact_email_title">E-Mail:</string>
    <string name="view_contact_phone_title">Phone:</string>
    <string name="view_contact_likes">Good Topics:</string>
    <string name="view_contact_dislikes">Bad Topics:</string>

    <!-- Accessibility Strings -->
    <string name="add_contact_button_description">Button with a plus in a circle. Used to add a new contact.</string>
    <string name="refresh_button_description">Button with a circling arrow. Used to refresh the contact list.</string>
    <string name="topic_info_button_description">Button with an "i" in a circle. Used to see more detailed information about the "topics" feature.</string>
    <string name="add_good_topic_button_description">Button with a green plus. Used to add a good topic to the contact.</string>
    <string name="add_bad_topic_button_description">Button with a green plus. Used to add a bad topic to the contact.</string>
    <string name="contact_image_description">Image of the contact.</string>
</resources>