<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/edit_contact_edit_img_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/dark_primary"
        android:contentDescription="@string/contact_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/edit_contact_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_contact_edit_img_button"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_contact_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/new_contact_first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_contact_edit_img_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_title" />

    <EditText
        android:id="@+id/edit_contact_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/new_contact_last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_contact_edit_img_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_first_name" />

    <EditText
        android:id="@+id/edit_contact_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/new_contact_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_edit_img_button" />

    <EditText
        android:id="@+id/edit_contact_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/new_contact_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_email" />

    <EditText
        android:id="@+id/edit_contact_add_like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/new_contact_like_topic"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_contact_add_like_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_phone"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/edit_contact_add_like_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/add_good_topic_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/edit_contact_add_like"
        app:layout_constraintEnd_toStartOf="@+id/edit_contact_add_dislike"
        app:layout_constraintStart_toEndOf="@+id/edit_contact_add_like"
        app:layout_constraintTop_toTopOf="@+id/edit_contact_add_like"
        app:srcCompat="@android:drawable/ic_input_add" />

    <EditText
        android:id="@+id/edit_contact_add_dislike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/new_contact_dislike_topic"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_contact_add_dislike_button"
        app:layout_constraintStart_toEndOf="@+id/edit_contact_add_like_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_phone"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/edit_contact_add_dislike_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/add_bad_topic_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/edit_contact_add_dislike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_contact_add_dislike"
        app:layout_constraintTop_toTopOf="@+id/edit_contact_add_dislike"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/likes_list_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/edit_contact_save_button"
        app:layout_constraintEnd_toStartOf="@+id/dislikes_list_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_add_like"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dislikes_list_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/edit_contact_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/likes_list_recycler"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_add_dislike"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/edit_contact_save_button"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@color/dark_primary"
        android:text="@string/edit_contact_save_button"
        android:textColor="@color/dark_secondary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>