<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/view_contact_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/dark_primary"
        android:contentDescription="@string/contact_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_contact_img"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_contact_edit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/view_contact_edit_button"
        app:layout_constraintBottom_toBottomOf="@+id/view_contact_img"
        app:layout_constraintEnd_toStartOf="@+id/view_contact_delete_button"
        app:layout_constraintStart_toEndOf="@+id/view_contact_img"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_name"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/view_contact_delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/view_contact_delete_button"
        app:layout_constraintBottom_toBottomOf="@+id/view_contact_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_contact_edit_button"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/view_contact_email_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view_contact_email_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/view_contact_email"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_img" />

    <TextView
        android:id="@+id/view_contact_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_contact_email_title"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_img" />

    <TextView
        android:id="@+id/view_contact_phone_title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view_contact_phone_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/view_contact_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_email_title" />

    <TextView
        android:id="@+id/view_contact_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_contact_phone_title"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_email" />

    <TextView
        android:id="@+id/view_contact_likes_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_contact_likes"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/view_contact_dislikes_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_phone" />

    <TextView
        android:id="@+id/view_contact_likes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_contact_dislikes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_likes_title" />

    <TextView
        android:id="@+id/view_contact_dislikes_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view_contact_dislikes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_contact_likes_title"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_phone" />

    <TextView
        android:id="@+id/view_contact_dislikes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_contact_likes"
        app:layout_constraintTop_toBottomOf="@+id/view_contact_dislikes_title" />

</androidx.constraintlayout.widget.ConstraintLayout>